# ClipGui

./: CMakeLists.txt  clip.cpp  node.h
